# p4analyzer

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  nx.json  package-lock.json  package.json  version.json  workspace.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  general.md  proposal.md
.github/workflows/: cargo-bloat.yml  ci.yml  clippy.yml  dependency-review.yml  rustfmt.yml  test.yml
crates/: README.md
crates/analyzer-abstractions/: Cargo.toml
crates/analyzer-abstractions/src/: fs.rs  futures.rs  futures_extensions.rs  lib.rs  tests.rs
crates/analyzer-abstractions/src/futures_extensions/: async_extensions.rs
crates/analyzer-abstractions/src/tests/: futures.rs
crates/analyzer-abstractions/src/tests/futures/: future_completion_source.rs
crates/analyzer-abstractions/src/tests/futures_extensions/: future_completion_source.rs
crates/analyzer-core/: Cargo.toml
crates/analyzer-core/benches/: lexer.rs  main.rs  parser.rs
crates/analyzer-core/src/: base_abstractions.rs  extensions.rs  lexer.rs  lib.rs  lsp_file.rs  lsp_position.rs  lsp_position_struct.rs  parser.rs  preprocessor.rs  tests.rs
crates/analyzer-core/src/parser/: ast.rs  p4_grammar.rs  simplifier.rs
crates/analyzer-core/tests/: error-reporting.rs  lexer.rs  lsp_file.rs  lsp_position.rs  lsp_position_struct.rs
crates/analyzer-host/: Cargo.toml
crates/analyzer-host/src/: fs.rs  fsm.rs  json_rpc.rs  lib.rs  lsp.rs  lsp_impl.rs  native_fs.rs  tests.rs  tracing.rs
crates/analyzer-host/src/json_rpc/: message.rs
crates/analyzer-host/src/lsp/: analyzer.rs  dispatch.rs  dispatch_target.rs  progress.rs  request.rs  state.rs  workspace.rs
crates/analyzer-host/src/lsp/fluent/: state.rs
crates/analyzer-host/src/lsp_impl/: active_initialized.rs  active_uninitialized.rs  initializing.rs  shutting_down.rs  state.rs  stopped.rs
crates/analyzer-host/src/tests/: unit_tests.rs
crates/lsif-p4/: Cargo.toml
crates/lsif-p4/src/: flags.rs  lsif_generator.rs  lsif_writer.rs  main.rs
crates/p4-analyzer/: Cargo.toml
crates/p4-analyzer-wasm/: Cargo.toml
crates/p4-analyzer-wasm/src/: buffer.rs  lib.rs
crates/p4-analyzer/src/: cli.rs  commands.rs  driver.rs  lib.rs  main.rs  native_fs.rs  stdio.rs  tests.rs
crates/p4-analyzer/src/cli/: flags.rs
crates/p4-analyzer/src/commands/: lsp_server.rs
crates/p4-analyzer/src/driver/: buffer_driver.rs
crates/p4-analyzer/src/tests/: unit_tests.rs
crates/tester/: Cargo.toml
crates/tester/src/: tester.rs
docs/: README.md  contributing.md  issue-lifecycle.md
docs/dev/: README.md  architecture.md
docs/diagrams/: architecture.drawio
tools/: executors.json  package.json  tsconfig.json  version_schema.json
tools/src/: jsonUtils.ts  tomlUtils.ts  version.ts
