[package]
name = "analyzer-abstractions"
description = "Provides the base types and utilities for P4 Analyzer services."
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rwlock = "1.3.0"
async-trait = "0.1.57"
lsp-types = "0.93.1"
tracing = "0.1.37"
thiserror = "1.0.37"
event-listener = "2.5.3"
futures = "0.3.25"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
