[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
itertools = "0.10.5"
lazy_static = "1.4.0"
logos = "0.12.1"
nom = "7.1.1"
parking_lot = "0.12.1"
paste = "1.0"
regex = "1.7.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }

[dev-dependencies]
criterion = "0.4"
oorandom = "11.1.3"
pretty_assertions = "1.3.0"

[[bench]]
name = "main"
harness = false
