[package]
name = "analyzer-host"
description = "Provides types and utilities for hosting P4 Analyzer services."
version = "0.0.0"
edition = "2021"

[dependencies]
analyzer-abstractions = { path = "../analyzer-abstractions" }
thiserror = "1.0.37"
cancellation = "0.1.0"
async-channel = "1.7.1"
serde = "1.0.143"
serde_json = "1.0.83"
tracing-subscriber = "0.3.16"
dyn-clone = "1.0.10"
dyn-clonable = "0.9.0"
async-rwlock = "1.3.0"
