[package]
name = "analyzer-host"
description = "Provides types and utilities for hosting P4 Analyzer services."
version = "0.0.0"
edition = "2021"

[dependencies]
analyzer-abstractions = { path = "../analyzer-abstractions" }
analyzer-core = { path = "../analyzer-core" }
tokio = { version = "1.21.2", features = ["full"] }
async-channel = "1.7.1"
async-rwlock = "1.3.0"
cancellation = "0.1.0"
dyn-clonable = "0.9.0"
dyn-clone = "1.0.10"
itertools = "0.10.5"
serde = "1.0.143"
serde_json = "1.0.83"
thiserror = "1.0.37"
tracing-subscriber = "0.3.16"
regex = "1.8.3"
futures = "0.3.28"
[target.'cfg(windows)'.dependencies]
notify = "6.0.0"