[package]
name = "lsif-p4"
description = "Generates a LSIF file from P4Analyzer"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "lsif-p4"
path = "src/main.rs"

[dependencies]
analyzer-host = { path = "../analyzer-host" }   # for AnalyzerHost
p4-analyzer = { path = "../p4-analyzer" }       # for BufferDriver & Driver
xflags = "0.3.0"        # CLI arguments
lsp-types = "0.94.0"    # LSIF types
serde = "1.0.164"       # JSon
serde_json = "1.0.96"   # JSon
cancellation = "0.1.0"  # CancellationTokenSource
tokio = { version = "1.21.2", features = ["full"] } # async functionality
queues = "1.0.2"        # BufferDriver::new()

[dev-dependencies]
