[package]
name = "p4-analyzer-wasm"
description = "The P4 Analyzer WebAssembly module."
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
analyzer-abstractions = { path = "../analyzer-abstractions" }
analyzer-host = { path = "../analyzer-host" }
cancellation = "0.1.0"
async-trait = "0.1.57"
async-channel = "1.7.1"
serde = "1.0.143"
serde_json = "1.0.83"
js-sys = "0.3.60"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.33"
futures = "0.3.25"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
