[package]
name = "p4-analyzer"
description = "A LSP compliant P4 analyzer."
version = "0.0.0"
edition = "2021"

[[bin]]
name = "p4analyzer"
path = "src/main.rs"

[dependencies]
analyzer-abstractions = { path = "../analyzer-abstractions" }
analyzer-host = { path = "../analyzer-host" }
xflags = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "1.0.37"
cancellation = "0.1.0"
async-channel = "1.7.1"
serde = "1.0.143"
serde_json = "1.0.83"
async-thread = "0.1.2"
ctrlc = "3.2.3"
tracing-appender = "0.2.2"
queues = "1.0.2"
async-std = "1.12.0"
glob = "0.3.1"

[dev-dependencies]
tester = { path = "../tester" }
