[package]
name = "tester"
description = "A testing target for P4 Analyzer"
version = "0.0.0"
edition = "2021"

[dependencies]
p4-analyzer = { path = "../p4-analyzer" }                       # for buffer_driver
analyzer-host = { path = "../analyzer-host" }                   # for Message
analyzer-abstractions = { path = "../analyzer-abstractions" }   # for lsp_types
lazy_static = "1.4.0"
async-channel = "1.7.1"
async-std = "1.12.0"
serde_json = "1.0.83"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
